fixed mobile too wide screen

--- a/style.css
+++ b/style.css
@@ -204,8 +204,6 @@ font-size: 1.5rem;
 
 .about-buttons {
 height:30vh;
-/* margin-top: 15vh;
-margin-bottom: 15vh; */
 }
 
 /* <!-- **** Projects Section **** --> */
@@ -305,15 +303,17 @@ color: black;
 margin-top: 15vh;
 }
 
-@media (min-width: 320px) and (max-width: 480px) {
-  body {
+@media screen and (max-width: 480px) {
+  body, html {
     margin: 0;
     padding: 0;
     background: white;
     color: #cdcdcd;
     font-family: 'Montserrat', sans-serif;
-    letter-spacing: 0.5rem; }
-
+    letter-spacing: 0.5rem; 
+    width: 100vw;
+    max-width: 100vw !important;
+  }
   a {
     text-decoration: none;
     color: inherit;
@@ -680,6 +680,3 @@ margin-top: 15vh;
   }
 
 }  
-
-
-
